fixed overflow issue on table container

--- a/src/molecules/table/_table.scss
+++ b/src/molecules/table/_table.scss
@@ -266,6 +266,7 @@
 
 	@include b(table-container) {
 		overflow-x: auto;
+		overflow-y: hidden;
 		-webkit-overflow-scrolling: touch;
 	}
 
